--- a/pract5-architecture/html/404.html
+++ b/pract5-architecture/html/404.html
@@ -1,31 +1,12 @@
-<!-- nginx/404.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Page Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-
-        h1 {
-            font-size: 50px;
-        }
-
-        p {
-            font-size: 20px;
-            color: #666;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
 </head>
-
 <body>
-    <h1>404 - Page Not Found</h1>
-    <p>Sorry, the page you are looking for does not exist.</p>
+    <h1>404 Not Found</h1>
+    <p>The page you are looking for does not exist.</p>
 </body>
-
 </html>
